--- a/JewelleryShop/.gitignore
+++ b/JewelleryShop/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# don't commit bin files
+/bin/
+
 ### STS ###
 .apt_generated
 .classpath
