Login Logout completed

--- a/JewelleryBackEnd/pom.xml
+++ b/JewelleryBackEnd/pom.xml
@@ -5,17 +5,17 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.17</version>
+		<version>3.2.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.sunbeam</groupId>
-	<artifactId>JewelleryShop</artifactId>
+	<groupId>com.JewelleryBackEnd</groupId>
+	<artifactId>JewelleryBackEnd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>JewelleryShop</name>
+	<name>JewelleryBackEnd</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
