--- a/JewelleryBackEnd/src/main/resources/application.properties
+++ b/JewelleryBackEnd/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/DmcProjectDb
+spring.datasource.url = jdbc:mysql://localhost:3306/DmcProjectDb2
 spring.datasource.username=root
 spring.datasource.password=manager
+#JPA properties
+
+spring.jpa.show-sql = true
+
+spring.jpa.hibernate.ddl-auto = update
