--- a/JewelleryBackEnd/src/main/resources/application.properties
+++ b/JewelleryBackEnd/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=manager
 spring.jpa.show-sql = true
 
 spring.jpa.hibernate.ddl-auto = update
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
