--- a/JewelleryBackEnd/src/main/resources/application.properties
+++ b/JewelleryBackEnd/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.datasource.url = jdbc:mysql://localhost:3306/DmcProjectDb2
 spring.datasource.username=root
 spring.datasource.password=manager
 #JPA properties
-
+server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.http-only=true
 spring.jpa.show-sql = true
 
 spring.jpa.hibernate.ddl-auto = update
